Prevent long words/links overflowing in questions and comments
This is not a problem in answers.
Closes #111

--- a/app/assets/stylesheets/components/_answerbox.scss
+++ b/app/assets/stylesheets/components/_answerbox.scss
@@ -3,8 +3,9 @@
   &__question-user, 
   &__answer-user, 
   &__answer-date {
-    margin-bottom: 0px;
+    margin-bottom: 0;
     overflow: hidden;
+    word-break: break-all;
   }
   
   &__answer-date {
